--- a/miyoo/res/lang/ua.lang
+++ b/miyoo/res/lang/ua.lang
@@ -14,7 +14,7 @@
     "11": "SMS",
     "12": "PS",
     "13": "PCE",
-    "14": "ІНШЕ",
+    "14": "ІНШІ",
     "15": "Налаштунки",
     "16": "ІНФО ПРО ГРУ",
     "17": "ІНФО ПРО ПРИСТРІЙ",
@@ -30,15 +30,15 @@
     "27": "Оновлення ROM`ів",
     "28": "Скидання до заводських налаштувань",
     "29": "Режим спалаху",
-    "30": "Інфо про пристрій - spruce 2.2",
+    "30": "Про пристрій",
     "31": "Тест обладнання",
     "32": "Інфо про АЦП",
     "33": "Статус:",
     "34": "Затримка:",
     "35": "Відсоток успіхів:",
     "36": "Відсоток помилок:",
-    "37": "ЗУПИНЕНИЙ",
-    "38": "ЗАПУЩЕНИЙ",
+    "37": "ЗУПИНЕНО",
+    "38": "ЗАПУЩЕНО",
     "39": "АЦП:",
     "40": "Зарядка",
     "41": "OTG",
@@ -46,8 +46,8 @@
     "43": "Помилка",
     "44": "обране",
     "45": "Відміна",
-    "46": "ОК",
-    "47": "сек.",
+    "46": "Так",
+    "47": "секунди",
     "48": "в",
     "49": "Список ігор",
     "50": "Очистити список",
@@ -58,23 +58,23 @@
     "55": "Додати до обраного",
     "56": "Оновлення",
     "57": "Оновити систему?",
-    "58": "Мало місця на SD\n%dM залишилось",
-    "59": "Модель",
+    "58": "Замало місця на SD-карті\n%dM залишилось",
+    "59": "Номер моделі",
     "60": "Серійний номер",
     "61": "Версія прошивки",
-    "62": "CPU",
+    "62": "Частота процесору",
     "63": "%dMHz",
-    "64": "Пам'ять",
+    "64": "Розмір пам'яті",
     "65": "%dM",
     "66": "SD-карта",
     "67": "Відновити налаштування за замовчуванням",
     "68": "Відновити всі налаштування системи\nПРИМІТКА:\nвміст SD-карти\nне буде видалено",
-    "69": "оновити образи на SD-карті",
+    "69": "Оновити ROM'и на SD-карті",
     "70": "Скидання налаштувань",
-    "71": "за замовчуванням",
-    "72": "повернути на 90",
+    "71": "За замовчуванням",
+    "72": "Повернути на 90",
     "73": "map3",
-    "74": "невідомо",
+    "74": "Невідомий",
     "75": "ЗАВАНТАЖЕННЯ",
     "76": "Завантаження",
     "77": "Очистити список нещодавніх?",
@@ -98,22 +98,22 @@
     "95": "Гучність",
     "96": "Вихід з гри",
     "97": "Запис %d/%d",
-    "98": "Порожній",
+    "98": "Порожньо",
     "99": "Немає дампу",
-    "100": "помилка завантаження",
-    "101": "помилка збереження",
-    "102": "збережено в слот %d",
+    "100": "Помилка завантаження",
+    "101": "Помилка збереження",
+    "102": "Збережено в слот %d",
     "103": "Повноекранний режим",
-    "104": "Увімк.",
-    "105": "Вимк.",
+    "104": "Увімк",
+    "105": "Вимк",
     "106": "RetroArch",
-    "107": "Утиліти",
+    "107": "Додатки",
     "108": "Ви впевнені, що хочете\nвимкнути свій A30?",
     "109": "Перевірка натискань",
     "110": "Налаштування клавіш",
     "111": "Вихід",
     "112": "ЗБЕРЕГТИ І ВИЙТИ",
-    "113": "після %d хв.",
+    "113": "через %d хв.",
     "114": "Ніколи",
     "115": "Режим сну",
     "116": "Видалити гру?",
