--- a/miyoo/res/lang/it.lang
+++ b/miyoo/res/lang/it.lang
@@ -26,11 +26,11 @@
 	"23":	"Cambia Lingua",
 	"24":	"Volume",
 	"25":	"Volume BGM",
-	"26":	"Luminosità",
+	"26":	"Luminosita",
 	"27":	"Ricarica le Rom",
-	"28":	"Ripristino Impostazioni di Fabbrica",
+	"28":	"Ripristina Impostazioni di Fabbrica",
 	"29":	"Modalità Flash",
-	"30":	"Info dispositivo - Spruce 2.4",
+	"30":	"Info dispositivo - spruce 3.0.0",
 	"31":	"Test Hardware",
 	"32":	"Info ADC",
 	"33":	"Stato:",
@@ -54,7 +54,7 @@
 	"51":	"Apri",
 	"52":	"Rimuovi dai Preferiti",
 	"53":	"Ricaricando",
-	"54":	"Scansionamento Rom",
+	"54":	"Scansiona Rom",
 	"55":	"Aggiungi ai Preferiti",
 	"56":	"Aggiorna",
 	"57":	"Aggiornare sistema?",
@@ -66,7 +66,7 @@
 	"63":	"%dMHz",
 	"64":	"Memoria",
 	"65":	"%dM",
-	"66":	"SD Card",
+	"66":	"Scheda SD",
 	"67":	"Ripristina tutte le",
 	"68":	"impostazioni di sistema\nNOTA: Il contenuto dell'SD card\nnon sarà eliminato!",
 	"69":	"ricarica le rom sulla TF card",
@@ -103,7 +103,7 @@
 	"100":	"caricamento fallito",
 	"101":	"salvataggio fallito",
 	"102":	"salvato in slot%d",
-	"103":  "A schermo intero",
+	"103":  "Schermo intero",
 	"104":  "On",
 	"105":  "Off",
 	"106":  "RetroArch",
@@ -115,7 +115,7 @@
     "112":  "SALVA ED ESCI",
     "113":  "%dm dopo",
     "114":  "Mai",
-	"115":  "Sleep Timer",
+	"115":  "Timer di Sospensione",
 	"116":  "Eliminare Gioco?",
     "117":  "NOTA:\nL'azione è permanente\neliminerà il gioco dalla scheda SD",
     "118":  "Display",
@@ -130,7 +130,7 @@
 	"127":  "Predefinito",
 	"128":  "Elimina",
 	"129":  "Correzione Audio",
-	"130":  "Fix e Correzioni",
+	"130":  "Correzioni",
     "131":  "Wi-Fi",
     "132":  "Connetti",
     "133":  "SSID",
