change label on X menu; add display call to broadcast changes to emu core and CPU speeds

--- a/miyoo/res/lang/en.lang
+++ b/miyoo/res/lang/en.lang
@@ -156,6 +156,6 @@
 	"153":  "Search",
 	"154":  "Fail to connect\nCheck your password\nOr reboot router",
 	"155":  "Website",
-	"156":  "System Options",
+	"156":  "Press A to toggle setting",
 	"157":  "USB Storage"
 }
