--- a/miyoo/res/lang/sq.lang
+++ b/miyoo/res/lang/sq.lang
@@ -14,7 +14,7 @@
 	"11":	"SMS",
 	"12":	"PS",
 	"13":	"PCE",
-	"14":	"ALTRO",
+	"14":	"MË SHUMË",
 	"15":	"Sistemi",
 	"16":	"INFO I LOJËS",
 	"17":	"INFO E APARATIT",
