Updating version to 3.0.1

--- a/miyoo/res/lang/it.lang
+++ b/miyoo/res/lang/it.lang
@@ -30,7 +30,7 @@
 	"27":	"Ricarica le Rom",
 	"28":	"Ripristina Impostazioni di Fabbrica",
 	"29":	"Modalità Flash",
-	"30":	"Info dispositivo - spruce 3.0.0",
+	"30":	"Info dispositivo - spruce v3.0.1",
 	"31":	"Test Hardware",
 	"32":	"Info ADC",
 	"33":	"Stato:",
