--- a/miyoo/res/lang/es.lang
+++ b/miyoo/res/lang/es.lang
@@ -30,7 +30,7 @@
 	"27":	"Actualizar Roms",
 	"28":	"Restablecer Fábrica",
 	"29":	"Modo Flash",
-	"30":	"Info del Dispositivo - spruce 3.0.0",
+	"30":	"Info del Dispositivo - spruce v3.0.1",
 	"31":	"Prueba de Hardware",
 	"32":	"Info ADC",
 	"33":	"Estatus:",
