--- a/miyoo/res/lang/ru.lang
+++ b/miyoo/res/lang/ru.lang
@@ -30,7 +30,7 @@
     "27": "Обновление образов",
     "28": "Сбросить настройки",
     "29": "Режим вспышки",
-    "30": "Инфо - spruce 3.0.0",
+    "30": "Инфо - spruce v3.0.1",
     "31": "Проверка спец. клавиш",
     "32": "Инфо об ADC",
     "33": "Статус:",
