Extend joystick calibration message Should be reflected across all translations?

--- a/miyoo/res/lang/en.lang
+++ b/miyoo/res/lang/en.lang
@@ -141,9 +141,9 @@
     "138":  "Step: %d/%d",
     "139":  "Press A to calibrate",
     "140":  "Start Calibration",
-    "141":  "Rotate joystick\nIn a few circles\nas far as possible",
-    "142":  "Release joystick\nLet it sit still for a while",
-    "143":  "Calibration finished\nPress B to quit",
+    "141":  "Rotate the joystick\nin a few circles\nas far as possible.",
+    "142":  "Release the joystick and\nlet it it sit still for a while.\nMove the joystick a little if stuck on this\nscreen for longer than 30 seconds.",
+    "143":  "Calibration finished\nPress B to exit",
     "144":  "Quit",
 	"145":  "Joystick Test",
 	"146":  "CPU",
