--- a/miyoo/res/lang/en.lang
+++ b/miyoo/res/lang/en.lang
@@ -142,7 +142,7 @@
     "139":  "Press A to calibrate",
     "140":  "Start Calibration",
     "141":  "Rotate the joystick\nin a few circles\nas far as possible.",
-    "142":  "Release the joystick and\nlet it it sit still for a while.\nMove the joystick a little if stuck on this\nscreen for longer than 30 seconds.",
+    "142":  "Release the joystick and\nlet it sit still for a while.\nMove the joystick a little if stuck on this\nscreen for longer than 30 seconds.",
     "143":  "Calibration finished\nPress B to exit",
     "144":  "Quit",
 	"145":  "Joystick Test",
