Update mainui strings for flip

--- a/miyoo355/app/lang/en.lang
+++ b/miyoo355/app/lang/en.lang
@@ -1,8 +1,8 @@
 {
 	"lang":	"English",
 	"0":	"RetroArch",
-	"1":	"Favorite",
-	"2":	"Game",
+	"1":	"Favorites",
+	"2":	"Games",
 	"3":	"ARCADE",
 	"4":	"NEOGEO",
 	"5":	"FC",
@@ -15,14 +15,14 @@
 	"12":	"PS",
 	"13":	"PCE",
 	"14":	"OTHER",
-	"15":	"Setting",
+	"15":	"Settings",
 	"16":	"GAME INFO",
 	"17":	"DEVICE INFO",
-	"18":	"Recent",
+	"18":	"Recents",
 	"19":	"FILE",
 	"20":	"ADC INFO",
 	"21":	"EncDec Test",
-	"22":	"Keys Map",
+	"22":	"Keymap",
 	"23":	"Language",
 	"24":	"Volume",
 	"25":	"BGM Volume",
@@ -30,7 +30,7 @@
 	"27":	"Refresh Roms",
 	"28":	"Factory Reset",
 	"29":	"Flash Mode",
-	"30":	"Device Info",
+	"30":	"Device info - spruce v3.3.2",
 	"31":	"Hardware Test",
 	"32":	"ADC Info",
 	"33":	"Status:",
@@ -68,7 +68,7 @@
 	"65":	"%dM",
 	"66":	"SD Card",
 	"67":	"Resume Default Setting",
-	"68":	"Resume all system\nsettings.TF card content\nwill not be deleted",
+	"68":	"Resume all system\nsettings.SD card content\nwill not be deleted",
 	"69":	"refresh roms on TF card",
 	"70":	"Reset",
 	"71":	"default",
@@ -77,12 +77,12 @@
 	"74":	"unknown",
 	"75":	"LOADING",
 	"76":	"Loading",
-	"77":	"Clear List",
-	"78":	"Clear recent game list,\nTF card content will\nnot be deleted",
-	"79":	"Clear Favorite",
-	"80":	"Clear all game from this\nlist, TF card content will\nnot be deleted",
-	"81":	"Remove Favorite",
-	"82":	"Remove game from this\nlist, TF card content will\nnot be deleted",
+	"77":	"Clear Recents?",
+	"78":	"\nNOTE:\nSD card content\nwill not be deleted",
+	"79":	"Clear Favorites?",
+	"80":	"\nNOTE:\nSD card content\nwill not be deleted",
+	"81":	"Remove from Favorites?",
+	"82":	"NOTE:\nSD card content\nwill not be deleted",
 	"83":	"Scan Games",
 	"84":	"GAMEINFO",
 	"85":	"Create Cache",
@@ -107,8 +107,8 @@
 	"104":  "On",
 	"105":  "Off",
 	"106":  "Native Menu",
-	"107":  "App",
-	"108":  "Shut down your device?",
+	"107":  "Apps",
+	"108":  "Are you sure you want to\nturn off your Flip?",
     "109":  "IO Test",
     "110":  "Key Setting",
     "111":  "Exit",
@@ -116,8 +116,8 @@
     "113":  "%dm later",
     "114":  "Never",
 	"115":  "Hibernate",
-	"116":  "Delete ROM",
-    "117":  "Delete ROM from TF Card?",
+	"116":  "Delete Game",
+    "117":  "Delete game from SD Card?",
     "118":  "Color",
     "119":  "Lumination",
     "120":  "Hue",
@@ -131,7 +131,7 @@
 	"128":  "Delete",
 	"129":  "Audio Fix",
 	"130":  "Fixes",
-	"131":  "WIFI",
+	"131":  "Wi-Fi",
 	"132":  "ACTIVITY",
     "133":  "Connect",
     "134":  "Hotspot",
@@ -142,7 +142,7 @@
     "139":  "Reset Bluetooth Service",
     "140":  "Scanning",
     "141":  "No Device Found",
-	"142":  "Bluetooth Not Ready",
+	"142":  "Bluetooth not ready",
 	"143":  "Put roms into following directory",
 	"144":  "Bluetooth Reset",
 	"145":  "Hotspot is on",
@@ -151,23 +151,23 @@
     "148":  "My Device",
     "149":  "Other Device",
 	"150":  "Info",
-	"151":  "Input SSID",
-	"152":  "Input Password",
+	"151":  "SSID:",
+	"152":  "Password:",
 	"153":  "Search",
-	"154":  "Fail to connect\nCheck your password\nOr reboot router",
+	"154":  "Failed to connect\nCheck your password\nor reboot your router",
 	"155":  "Website",
 	"156":  "Choose Core",
 	"157":  "Calibration",
     "158":  "Step: %d/%d",
     "159":  "Press A to calibrate",
     "160":  "Start Calibration",
-    "161":  "Rotate joypad\na few circles\nas far as possible",
-    "162":  "Release joypad\nand let it sit for a while",
-    "163":  "Calibration finished\nPress B to quit",        
+    "161":  "Rotate the joystick\nin a few circles\nas far as possible."
+    "162":  "Release the joystick and\nlet it sit still for a while.\nMove the joystick a little if stuck on this\nscreen for longer than 30 seconds.",
+    "163":  "Calibration finished\nPress B to exit",        
     "164":  "Quit",
-    "165":  "Joypad Test",
-    "166":  "Left Joypad",
-    "167":  "Right Joypad",
+    "165":  "Joystick Test",
+    "166":  "Left Joystick",
+    "167":  "Right Joystick",
 	"168":  "Use EmulationStation",
 	"169":  "Use EmulationStation by default?",
     "170":  "Edit",
