Update some more flip strings

--- a/miyoo355/app/lang/en.lang
+++ b/miyoo355/app/lang/en.lang
@@ -55,20 +55,20 @@
 	"52":	"Remove",
 	"53":	"Refresh",
 	"54":	"Refresh Roms",
-	"55":	"Add Favorite",
+	"55":	"Add to Favorites",
 	"56":	"Upgrade",
 	"57":	"Update system?",
 	"58":	"SD space low\n%dM left",
 	"59":	"Mode",
 	"60":	"Serial",
-	"61":	"Version",
+	"61":	"FW Version",
 	"62":	"CPU",
 	"63":	"%dMHz",
 	"64":	"Memory",
 	"65":	"%dM",
 	"66":	"SD Card",
 	"67":	"Resume Default Setting",
-	"68":	"Resume all system\nsettings.SD card content\nwill not be deleted",
+	"68":	"Resume all system settings\nNOTE:\nSD card content\nwill not be deleted",
 	"69":	"refresh roms on TF card",
 	"70":	"Reset",
 	"71":	"default",
