--- a/miyoo355/app/lang/it.lang
+++ b/miyoo355/app/lang/it.lang
@@ -30,7 +30,7 @@
 	"27":	"Ricarica Rom",
 	"28":	"Reset di Fabbrica",
 	"29":	"Modalità Flash",
-	"30":	"Info Dispositivo",
+	"30":	"Info Dispositivo - spruce v3.3.2",
 	"31":	"Test Hardware",
 	"32":	"Info ADC",
 	"33":	"Stato:",
