Add new localisation strings for trimui Todo: alternate languages

--- a/miyoo355/app/lang/en.lang
+++ b/miyoo355/app/lang/en.lang
@@ -67,8 +67,8 @@
 	"64":	"Memory",
 	"65":	"%dM",
 	"66":	"SD Card",
-	"67":	"Resume Default Setting",
-	"68":	"Resume all system settings\nNOTE:\nSD card content\nwill not be deleted",
+	"67":	"Factory Reset",
+	"68":	"Reset all system settings\nNOTE:\nSD card content\nwill not be deleted",
 	"69":	"refresh roms on TF card",
 	"70":	"Reset",
 	"71":	"default",
