Remove newline from trimui factory reset string

--- a/trimui/res/lang/en.lang
+++ b/trimui/res/lang/en.lang
@@ -69,7 +69,7 @@
 	"65":	"%dM",
 	"66":	"SD Card",
 	"67":	"Factory Reset",
-	"68":	"Reset all system settings\nNOTE:\nSD card content\nwill not be deleted",
+	"68":	"Reset all system settings\nNOTE: SD card content\nwill not be deleted",
 	"69":	"refresh roms on TF card",
 	"70":	"Reset",
 	"71":	"default",
