--- a/App/PyUI/lang/English.json
+++ b/App/PyUI/lang/English.json
@@ -4,5 +4,11 @@
     "Apps": "Apps",
     "Collections": "Collections",
     "Favorites": "Favorites",
-    "Settings": "Settings"
+    "Settings": "Settings",
+    "noEntriesFound": "No Entries Found",
+    "systemGameSearch": "$system Game Search",
+    "allSystemGameSearch": "All System Game Search",
+    "systemMenuSubOptions" : "$system Menu Sub Options",
+    "gameSearch": "Game Search:"
+    
 }
