Rename exit to Reload UI in spruce
e372d172f11e12f0e66d4d186a138ebf0e8e1229

--- a/App/PyUI/lang/English.json
+++ b/App/PyUI/lang/English.json
@@ -9,6 +9,7 @@
     "systemGameSearch": "$system Game Search",
     "allSystemGameSearch": "All System Game Search",
     "systemMenuSubOptions" : "$system Menu Sub Options",
-    "gameSearch": "Game Search:"
+    "gameSearch": "Game Search:",
+    "exitPyUi": "Reload UI"
     
 }
