Edit Romanian and German lang files
Thank you Vladnerd and CyberGecko!!!!!

--- a/App/PyUI/lang/German.json
+++ b/App/PyUI/lang/German.json
@@ -16,7 +16,7 @@
     "showApp": "App anzeigen",
     "hideHiddenApps": "Verborgene Apps ausblenden",
     "sortFavorites": "Favoriten sortieren",
-    "toggleSettingsAsGameSpecificOverride": "Einstellungen als spielspezifische Überschreibung umschalten",
+    "toggleSettingsAsGameSpecificOverride": "Einstellungen als spielspezifische Überschreibung ein/aus",
     "removeFavorite": "Aus Favoriten entfernen",
     "addFavorite": "Zu Favoriten hinzufügen",
     "addRemoveCollection": "Zur Sammlung hinzufügen/entfernen",
