--- a/App/PyUI/lang/Romanian.json
+++ b/App/PyUI/lang/Romanian.json
@@ -6,11 +6,11 @@
     "Favorites": "Favorite",
     "Settings": "Setări",
     "noEntriesFound": "Nu s-au găsit intrări",
-    "systemGameSearch": "Căutare jocuri $system",
+    "systemGameSearch": "Căutare jocuri la nivel de sistem",
     "allSystemGameSearch": "Căutare jocuri pentru toate sistemele",
-    "systemMenuSubOptions": "Sub-opțiuni meniu $system",
+    "systemMenuSubOptions": "Sub-opțiuni meniu sistem",
     "gameSearch": "Căutare joc:",
-    "exitPyUi": "Reîncarcă UI",
+    "exitPyUi": "Ieșire PyUi",
     "setPyuiAsStartup": "Setează PyUI la pornire",
     "romSearch": "Căutare ROM",
     "showApp": "Arată aplicația",
@@ -97,7 +97,7 @@
     "Cols": "Coloane",
     "imgWidth": "Lățime imagine",
     "imgHeight": "Înălțime imagine",
-    "primImgWidth": "Lățime imagine primară %",
+    "primImgWidth": "Lățime imagine primară",
     "shrinkFurtherAway": "Micșorează la distanță",
     "boxartResizeType": "Tip redimensionare boxart",
     "selBgResizePadWidth": "Lățime fundal selecție",
