--- a/App/PyUI/lang/Serbian.json
+++ b/App/PyUI/lang/Serbian.json
@@ -4,11 +4,11 @@
     "Apps": "Aplikacije",
     "Collections": "Kolekcije",
     "Favorites": "Omiljeno",
-    "Settings": "Postavke",
+    "Settings": "Podešavanja",
     "noEntriesFound": "Nema pronađenih stavki",
     "systemGameSearch": "$system Pretraga igara",
     "allSystemGameSearch": "Pretraga svih sistema",
-    "systemMenuSubOptions": "$system Podopcije menija",
+    "systemMenuSubOptions": "$system Opcije podmenija",
     "gameSearch": "Pretraga igara:",
     "exitPyUi": "Ponovo učitaj interfejs",
     "setPyuiAsStartup": "Postavi PyUI pri pokretanju",
@@ -16,7 +16,7 @@
     "showApp": "Prikaži aplikaciju",
     "hideHiddenApps": "Sakrij skrivene aplikacije",
     "sortFavorites": "Sortiraj omiljeno",
-    "toggleSettingsAsGameSpecificOverride": "Uključi/isključi posebne postavke za igru",
+    "toggleSettingsAsGameSpecificOverride": "Uključi/isključi specifična podešavanja za igru",
     "removeFavorite": "Ukloni iz omiljenog",
     "addFavorite": "Dodaj u omiljeno",
     "addRemoveCollection": "Dodaj/Ukloni iz kolekcije",
@@ -26,50 +26,50 @@
     "loadState": "Učitaj stanje",
     "toggleFastForward": "Uključi/isključi ubrzanje",
     "raMenu": "RA Meni",
-    "createNewCollection": "Kreiraj novu kolekciju",
+    "createNewCollection": "Napravi novu kolekciju",
     "addTo": "Dodaj u",
     "addToCollection": "Dodaj u kolekciju",
     "removeFrom": "Ukloni iz",
-    "powerOff": "Isključi uređaj",
-    "Backlight": "Pozadinsko osvjetljenje",
+    "powerOff": "Isključi",
+    "Backlight": "Pozadinsko osvetljenje",
     "Volume": "Jačina zvuka",
     "WiFi": "WiFi",
     "Bluetooth": "Bluetooth",
     "Theme": "Tema",
-    "themeSettings": "Postavke teme",
-    "soundSettings": "Postavke zvuka",
-    "additionalSettings": "Dodatne postavke",
+    "themeSettings": "Podešavanja teme",
+    "soundSettings": "Podešavanja zvuka",
+    "additionalSettings": "Dodatna podešavanja",
     "Status": "Status",
-    "calibrateAnalogSticks": "Kalibracija analognih palica",
-    "remapButtons": "Promjena rasporeda dugmadi",
-    "Brightness": "Osvjetljenje",
+    "calibrateAnalogSticks": "Kalibriši analogne stikove",
+    "remapButtons": "Promena rasporeda dugmića",
+    "Brightness": "Osvetljenost",
     "Contrast": "Kontrast",
-    "Saturation": "Zasićenje",
+    "Saturation": "Saturacija",
     "Hue": "Nijansa",
     "Red": "Crvena",
     "Blue": "Plava",
     "Green": "Zelena",
-    "displaySettings": "Postavke ekrana",
-    "timeSettings": "Postavke vremena",
-    "gameSystemSelectSettings": "Postavke izbora sistema",
-    "gameSelectSettings": "Postavke izbora igre",
-    "gameSwitcherSettings": "GameSwitcher postavke",
-    "gameArtDisplaySettings": "Postavke prikaza omota",
+    "displaySettings": "Podešavanja ekrana",
+    "timeSettings": "Podešavanja vremena",
+    "gameSystemSelectSettings": "Podešavanja izbora sistema",
+    "gameSelectSettings": "Podešavanja izbora igre",
+    "gameSwitcherSettings": "GameSwitcher podešavanja",
+    "gameArtDisplaySettings": "Podešavanja prikaza omota",
     "downloadBoxart": "Preuzmi omote",
-    "controllerSettings": "Postavke kontrolera",
-    "languageSettings": "Postavke jezika",
+    "controllerSettings": "Podešavanja kontrolera",
+    "languageSettings": "Podešavanja jezika",
     "stockOsMenu": "Stock OS meni",
-    "optimizeBoxart": "Optimiziraj omote",
+    "optimizeBoxart": "Optimizuj omote",
     "lockedDownModes": "Zaključani modovi",
     "l2R2SkipByLetterForDaijishoThemes": "L2/R2 Skok po slovu za Daijisho teme",
     "holdMenuForGameswitcher": "Drži Meni za GameSwitcher",
     "preferSavestateScreenshots": "Preferiraj screenshot sačuvanog stanja",
     "gameCount": "Broj igara",
     "viewType": "Tip prikaza",
-    "fullScreenResizeType": "Tip prilagođavanja cijelog ekrana",
-    "trueFullScreen": "Pravi cijeli ekran",
+    "fullScreenResizeType": "Tip prilagođavanja celog ekrana",
+    "trueFullScreen": "Pravi ceo ekran",
     "topbarGamename": "Gornja traka = Naziv igre",
-    "useRecentsForGameswitcher": "Koristi Nedavno za GameSwitcher",
+    "useRecentsForGameswitcher": "Koristi Nedavne za GameSwitcher",
     "showAllSystems": "Prikaži sve sisteme",
     "gameSystemSorting": "Sortiranje sistema",
     "systemTypePriority": "Prioritet tipa sistema",
@@ -79,43 +79,43 @@
     "enterGameSelectionOnlyMode": "Uđi u mod samo za izbor igre",
     "enterSimpleMode": "Uđi u jednostavni mod",
     "Year": "Godina",
-    "Month": "Mjesec",
+    "Month": "Mesec",
     "Day": "Dan",
-    "hour24": "24-satni format",
-    "Minute": "Minuta",
+    "hour24": "24-časovni sat",
+    "Minute": "Minut",
     "playButtonPressSound": "Pusti zvuk pritiska dugmeta",
     "playBgm": "Pusti pozadinsku muziku",
     "bgmVolume": "Jačina pozadinske muzike",
-    "setTimeDate": "Podesi vrijeme i datum",
+    "setTimeDate": "Podesi vreme i datum",
     "setTimezone": "Podesi vremensku zonu",
     "Clock": "Sat",
-    "24HourClock": "24-satni sat",
+    "24HourClock": "24-časovni sat",
     "showAmPm": "Prikaži AM/PM",
-    "gameSelMenu": "Meni za izbor igre",
+    "gameSelMenu": "Meni izbora igre",
     "imgMode": "Režim slike",
     "Rows": "Redovi",
     "Cols": "Kolone",
     "imgWidth": "Širina slike",
     "imgHeight": "Visina slike",
     "primImgWidth": "Primarna širina slike %",
-    "shrinkFurtherAway": "Smanji udaljene elemente",
-    "boxartResizeType": "Tip promjene veličine omota",
-    "selBgResizePadWidth": "Širina margine pozadine izbora",
-    "selBgResizePadHeight": "Visina margine pozadine izbora",
+    "shrinkFurtherAway": "Smanji dalje elemente",
+    "boxartResizeType": "Tip promene veličine omota",
+    "selBgResizePadWidth": "Širina margine za pozadinu izbora",
+    "selBgResizePadHeight": "Visina margine za pozadinu izbora",
     "skipMainMenu": "Preskoči glavni meni",
     "mainMenu": "Glavni meni",
     "mainMenuColumns": "Kolone glavnog menija",
     "showText": "Prikaži tekst",
-    "showRecents": "Prikaži nedavno",
+    "showRecents": "Prikaži nedavne",
     "showCollections": "Prikaži kolekcije",
     "showFavorites": "Prikaži omiljeno",
     "showApps": "Prikaži aplikacije",
-    "showSettings": "Prikaži postavke",
+    "showSettings": "Prikaži podešavanja",
     "mainMenuThemeOptions": "Opcije teme glavnog menija",
     "systemSelectThemeOptions": "Opcije teme izbora sistema",
     "gameSelectMenuThemeOptions": "Opcije teme izbora igre",
     "Fonts": "Fontovi",
     "gridViewThemeOptions": "Opcije teme prikaza mreže",
     "topBarOptions": "Opcije gornje trake",
-    "leftSideInitialXOffset": "Početni X pomak lijeve strane"
+    "leftSideInitialXOffset": "Početni X pomak leve strane"
 }
