--- a/App/PyUI/lang/Russian.json
+++ b/App/PyUI/lang/Russian.json
@@ -7,30 +7,30 @@
     "Settings": "Настройки",
     "noEntriesFound": "Записи не найдены",
     "systemGameSearch": "Поиск игр $system",
-    "allSystemGameSearch": "Поиск игр всех систем",
-    "systemMenuSubOptions": "Подменю $system",
+    "allSystemGameSearch": "Поиск игр по всем системам",
+    "systemMenuSubOptions": "Подпункты меню $system",
     "gameSearch": "Поиск игры:",
-    "exitPyUi": "Перезагрузить интерфейс",
+    "exitPyUi": "Перезагрузить UI",
     "setPyuiAsStartup": "Установить PyUI при запуске",
     "romSearch": "Поиск ROM",
     "showApp": "Показать приложение",
     "hideHiddenApps": "Скрыть скрытые приложения",
     "sortFavorites": "Сортировать избранное",
-    "toggleSettingsAsGameSpecificOverride": "Использовать настройки для конкретной игры",
+    "toggleSettingsAsGameSpecificOverride": "Вкл/Выкл игровые настройки",
     "removeFavorite": "Удалить из избранного",
     "addFavorite": "Добавить в избранное",
-    "addRemoveCollection": "Добавить/удалить из коллекции",
+    "addRemoveCollection": "Добавить/Удалить из коллекции",
     "launchRandomGame": "Запустить случайную игру",
     "exitGame": "Выйти из игры",
     "saveState": "Сохранить состояние",
     "loadState": "Загрузить состояние",
-    "toggleFastForward": "Включить/выключить ускорение",
+    "toggleFastForward": "Вкл/Выкл быструю перемотку",
     "raMenu": "Меню RA",
     "createNewCollection": "Создать новую коллекцию",
     "addTo": "Добавить в",
     "addToCollection": "Добавить в коллекцию",
     "removeFrom": "Удалить из",
-    "powerOff": "Выключить",
+    "powerOff": "Выключение",
     "Backlight": "Подсветка",
     "Volume": "Громкость",
     "WiFi": "WiFi",
@@ -51,68 +51,71 @@
     "Green": "Зелёный",
     "displaySettings": "Настройки дисплея",
     "timeSettings": "Настройки времени",
-    "gameSystemSelectSettings": "Настройки выбора игровой системы",
+    "gameSystemSelectSettings": "Настройки выбора системы",
     "gameSelectSettings": "Настройки выбора игры",
-    "gameSwitcherSettings": "Настройки переключателя игр",
+    "gameSwitcherSettings": "Настройки GameSwitcher",
     "gameArtDisplaySettings": "Настройки отображения обложек",
-    "downloadBoxart": "Скачать обложку",
+    "downloadBoxart": "Загрузить обложки",
     "controllerSettings": "Настройки контроллера",
     "languageSettings": "Настройки языка",
     "stockOsMenu": "Меню стандартной ОС",
-    "optimizeBoxart": "Оптимизация обложек",
-    "lockedDownModes": "Заблокированные режимы",
-    "l2R2SkipByLetterForDaijishoThemes": "Пропуск L2/R2 по букве для тем Daijisho",
-    "holdMenuForGameswitcher": "Удерживать меню для GameSwitcher",
-    "preferSavestateScreenshots": "Использовать скриншоты из сохранений",
+    "optimizeBoxart": "Оптимизировать обложки",
+    "lockedDownModes": "Ограниченные режимы",
+    "l2R2SkipByLetterForDaijishoThemes": "L2/R2 — переход по буквам (темы Daijisho)",
+    "holdMenuForGameswitcher": "Удерживать Menu для GameSwitcher",
+    "preferSavestateScreenshots": "Предпочитать скриншоты сохранений",
     "gameCount": "Количество игр",
-    "viewType": "Тип просмотра",
-    "fullScreenResizeType": "Тип масштабирования на весь экран",
-    "trueFullScreen": "Полноэкранный режим",
-    "topbarGamename": "Верхняя панель = название игры",
-    "useRecentsForGameswitcher": "Использовать недавние для GameSwitcher",
+    "viewType": "Тип отображения",
+    "fullScreenResizeType": "Тип масштабирования полного экрана",
+    "trueFullScreen": "Настоящий полный экран",
+    "topbarGamename": "Верхняя панель = Название игры",
+    "useRecentsForGameswitcher": "Использовать Недавние для GameSwitcher",
     "showAllSystems": "Показать все системы",
-    "gameSystemSorting": "Сортировка игровых систем",
+    "gameSystemSorting": "Сортировка систем",
     "systemTypePriority": "Приоритет типа системы",
     "systemBrandPriority": "Приоритет бренда системы",
     "systemYearPriority": "Приоритет года системы",
     "systemNamePriority": "Приоритет имени системы",
-    "enterGameSelectionOnlyMode": "Войти в режим только выбора игры",
+    "enterGameSelectionOnlyMode": "Режим только выбора игры",
     "enterSimpleMode": "Войти в простой режим",
     "Year": "Год",
     "Month": "Месяц",
     "Day": "День",
-    "hour24": "24-часовой формат",
+    "hour24": "24 часа",
     "Minute": "Минута",
     "playButtonPressSound": "Звук нажатия кнопки",
-    "playBgm": "Воспроизвести BGM",
-    "bgmVolume": "Громкость BGM",
-    "setTimeDate": "Установить время и дату",
+    "playBgm": "Фоновая музыка",
+    "bgmVolume": "Громкость фоновой музыки",
+    "setTimeDate": "Установить дату и время",
     "setTimezone": "Установить часовой пояс",
     "Clock": "Часы",
     "24HourClock": "24-часовой формат",
     "showAmPm": "Показывать AM/PM",
     "gameSelMenu": "Меню выбора игры",
     "imgMode": "Режим изображения",
-    "Rows": "Ряды",
-    "Cols": "Столбцы",
+    "Rows": "Строки",
+    "Cols": "Колонки",
     "imgWidth": "Ширина изображения",
     "imgHeight": "Высота изображения",
     "primImgWidth": "Ширина основного изображения %",
-    "shrinkFurtherAway": "Уменьшать с удалением",
-    "boxartResizeType": "Тип масштабирования обложки",
-    "selBgResizePadWidth": "Ширина отступа фона выбора",
-    "selBgResizePadHeight": "Высота отступа фона выбора",
+    "shrinkFurtherAway": "Уменьшать при удалении",
+    "boxartResizeType": "Тип масштабирования обложек",
+    "selBgResizePadWidth": "Ширина фона выбора",
+    "selBgResizePadHeight": "Высота фона выбора",
     "skipMainMenu": "Пропустить главное меню",
     "mainMenu": "Главное меню",
-    "mainMenuColumns": "Столбцы главного меню",
-    "showText": "Показать текст",
-    "showRecents": "Показать недавние",
-    "showCollections": "Показать коллекции",
-    "showFavorites": "Показать избранное",
-    "showApps": "Показать приложения",
-    "showSettings": "Показать настройки",
-    "mainMenuThemeOptions": "Опции темы главного меню",
-    "systemSelectThemeOptions": "Опции темы выбора системы",
-    "gameSelectMenuThemeOptions": "Опции темы меню выбора игры",
+    "mainMenuColumns": "Колонки главного меню",
+    "showText": "Показывать текст",
+    "showRecents": "Показывать недавние",
+    "showCollections": "Показывать коллекции",
+    "showFavorites": "Показывать избранное",
+    "showApps": "Показывать приложения",
+    "showSettings": "Показывать настройки",
+    "mainMenuThemeOptions": "Настройки темы главного меню",
+    "systemSelectThemeOptions": "Настройки темы выбора системы",
+    "gameSelectMenuThemeOptions": "Настройки темы выбора игры",
     "Fonts": "Шрифты",
-    "gridViewThe
+    "gridViewThemeOptions": "Настройки темы сетки",
+    "topBarOptions": "Настройки верхней панели",
+    "leftSideInitialXOffset": "Начальное смещение X слева"
+}
